- issue        Backquote phpMyAdmin table name on internal relation delete query for Designer
- issue #16982 Do not try to delete internal relations if they are not configured
- issue #16982 Show success messages on Designer for add and remove relation operations
- issue        Fixed possible "Undefined index: clause_is_unique" on replace value in cell

5.1.1 (2021-06-04)
- issue #13325 Fixed created procedure shows up in triggers and events and vice-versa
- issue        Fixed adding an event shows an empty row
- issue #16706 Fixed a PHP error when visualizing a nullable geometry column
- issue        Fixed a PHP type error when exporting triggers to ODF
- issue #16659 Fixed the Column Drop arrow to make it responsive
- issue #16677 Improved the Font size of an executed SQL query
- issue #16677 Fixed Metro theme DB tree background
- issue #16713 Fixed "PhpMyAdmin\Url::getFromRoute" PHP error for old config values
- issue #16713 Add a legacy fallback for the old config value of "$cfg['DefaultTabDatabase']" and others
- issue #16698 Fix relative fallback URL to './' instead of '/'
- issue        Fixed Yaml export to quote strings even when they are numeric
- issue #16704 Fixed PHP type errors on the substring transformation
- issue #14026 Fixed error messages and conditions for MD5 and AES_* functions
- issue #16708 Fixed PHP "Uncaught TypeError: hash_hmac()" on double quick edit
- issue #16709 Fix TCPDF open_basedir issue due to internal guessing code from TCPDF
- issue #16729 Fixed the silencing error management for PHP >= 8.0
- issue #16604 Set back tables width like in 5.0 versions
- issue #16716 Fixed rename button disappears after a column drop on table structure page
- issue #15628 Fixed "JSON encoding failed: Malformed UTF-8 characters" when browsing data that uses binary to IP transformation
- issue #14395 Fixed display chart with timeline & series name column trigger JS error
- issue #16738 Fixed quick search submit is not working on multi server server > 1